Update headers to new standard

--- a/src/epub/text/book-10.xhtml
+++ b/src/epub/text/book-10.xhtml
@@ -7,9 +7,9 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-10" epub:type="chapter">
-			<h2 epub:type="title z3998:roman">X</h2>
+			<h2 epub:type="ordinal z3998:roman">X</h2>
 			<section id="part-10-1">
-				<h3>Epicurus</h3>
+				<h3 epub:type="title">Epicurus</h3>
 				<p>Epicurus was an Athenian, and the son of Neocles and Chaerestrate, of the burgh of Gargettus, and of the family of the Philaidae, as Metrodorus tells us in his treatise on Nobility of Birth. Some writers, and among them Heraclides in his <i epub:type="se:name.publication.book">Abridgment of Sotion</i>, say that as the Athenians had colonised Samos, he was brought up there, and came to Athens in his eighteenth year, while Xenocrates was president of the Academy, and Aristotle at Chalcis. But after the death of Alexander the Macedonian, when the Athenians were driven out of Samos by Perdiccas, Epicurus went to Colophon to his father.</p>
 				<p>And when he had spent some time there and collected some disciples, he again returned to Athens, in the time of Anaxicrates, and for some time studied philosophy, mingling with the rest of the philosophers; but subsequently, he somehow or other established the school which was called after his name; and he used to say that he began to study philosophy when he was fourteen years of age; but Apollodorus the Epicurean, in the first book of his account of the life of Epicurus, says that he came to the study of philosophy having conceived a great contempt for the grammarians, because they could not explain to him the statements in Hesiod respecting Chaos.</p>
 				<p>But Hermippus tells us that he himself was a teacher of grammar, and that afterwards, having met with the books of Democritus, he applied himself with zeal to philosophy, on which account Timon says of him:</p>
