--- a/src/epub/text/book-4.xhtml
+++ b/src/epub/text/book-4.xhtml
@@ -7,9 +7,9 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-4" epub:type="chapter">
-			<h2 epub:type="title z3998:roman">IV</h2>
+			<h2 epub:type="ordinal z3998:roman">IV</h2>
 			<section id="part-4-1">
-				<h3>Speusippus</h3>
+				<h3 epub:type="title">Speusippus</h3>
 				<p>The long account which I have given of Plato was compiled to the best of my power, and in it I collected with great zeal and industry all that was reported of the man.</p>
 				<p>And he was succeeded by Speusippus, the son of Eurymedon, and a citizen of Athens, of the Myrrhinusian burgh, and he was the son of Plato’s sister Potone.</p>
 				<p>He presided over his school for eight years, beginning to do so in the hundred and eighth olympiad. And he set up images of the Graces in the temple of the Muses, which had been built in the Academy by Plato.</p>
@@ -37,7 +37,7 @@
 				<p>There was also another person of the name of Speusippus, a physician of the school of Herophilus,<a href="endnotes.xhtml#note-34" id="noteref-34" epub:type="noteref">34</a> a native of Alexandria.</p>
 			</section>
 			<section id="part-4-2">
-				<h3>Xenocrates</h3>
+				<h3 epub:type="title">Xenocrates</h3>
 				<p>Xenocrates was the son of Agathenor, and a native of Chalcedon. From his early youth he was a pupil of Plato, and also accompanied him in his voyages to Sicily.</p>
 				<p>He was by nature of a lazy disposition, so that they say that Plato said once, when comparing him to Aristotle: “The one requires the spur, and the other the bridle.” And on another occasion, he said: “What a horse and what an ass am I dressing opposite to one another!”</p>
 				<p>In other respects Xenocrates was always of a solemn and grave character, so that Plato was continually saying to him: “Xenocrates, sacrifice to the Graces.” And he spent the greater part of his time in the Academy, and whenever he was about to go into the city, they say all the turbulent and quarrelsome rabble in the city used to make way for him to pass by. And once, Phryne the courtesan wished to try him and pretending that she was pursued by some people, she fled and took refuge in his house; and he admitted her indeed, because of what was due to humanity; and as there was but one bed in the room, he, at her entreaty, allowed her to share it with him; but at last, in spite of all her entreaties, she got up and went away, without having been able to succeed in her purpose; and told those who asked her that she had quitted a statue and not a man. But some say that the real story is that his pupils put Lais into his bed, and that he was so continent that he submitted to some severe operations of excision and cautery.</p>
@@ -84,7 +84,7 @@
 				<p>And there were five other people of the name of Xenocrates. One was an ancient tactician, a fellow citizen, and very near relation of the philosopher of whom we have been speaking; and there is extant an oration of his which is scribed, <i epub:type="se:name.publication.book">On Arsinoe</i>, and which was written on the death of Arsinoe. A third was a philosopher who wrote some very indifferent elegiac poetry; and that is not strange, for when poets take to writing in prose, they succeed pretty well; but when prose writers try their hand at poetry, they fail; from which it is plain, that the one is a gift of nature, and the other a work of art. The fourth was a statuary; the fifth a writer of songs, as we are told by Aristoxenus.</p>
 			</section>
 			<section id="part-4-3">
-				<h3>Polemo</h3>
+				<h3 epub:type="title">Polemo</h3>
 				<p>Polemo was the son of Philostratus, an Athenian, of the burgh of Oea. And when he was young, he was so very intemperate and profligate, that he used always to carry money about with him, to procure the instant gratification of his passions; and he used also to hide money in the narrow alleys, for this purpose. And once there was found in the Academy a piece of three obols, hidden against one of the columns, which he had put there for some purpose like that which I have indicated; and on one occasion he arranged beforehand with some young men, and rushed, adorned with a garland and drunk, into the school of Xenocrates. But he took no notice of him, and continued his discourse as he had begun it, and it was in praise of temperance; and the young man, hearing it, was gradually charmed, and became so industrious, that he surpassed all the rest of the disciples, and himself became the successor of Xenocrates, in his school beginning in the hundred and sixteenth olympiad.</p>
 				<p>And Antigonus of Carystus says in his <i epub:type="se:name.publication.book">Lives</i>, that his father had been the chief man of the city, and had kept chariots for the Olympic games.</p>
 				<p>He also asserts that Polemo was prosecuted by his wife, on the charge of ill-treatment, because he indulged in illicit pleasures, and despised her.</p>
@@ -122,7 +122,7 @@
 				</blockquote>
 			</section>
 			<section id="part-4-4">
-				<h3>Crates</h3>
+				<h3 epub:type="title">Crates</h3>
 				<p>Crates was the son of Antigenes, and of the Thriasian burgh, and a pupil and attached friend of Polemo. He was also his successor as president of his school.</p>
 				<p>And they benefited one another so much that not only did they delight while alive in the same pursuits, but almost to their latest breath did they resemble one another, and even after they were both dead they shared the same tomb. In reference to which circumstance Antagoras has written an epigram on the pair, in which he expresses himself thus:</p>
 				<blockquote epub:type="z3998:verse">
@@ -147,7 +147,7 @@
 				<p>But there were ten people of the name of Crates: The first was a poet of the old comedy; the second was an orator of Tralles, a pupil of Isocrates; the third was an engineer who served under Alexander; the fourth a Cynic, whom we shall mention hereafter; the fifth a Peripatetic philosopher; the sixth the Academic philosopher, of whom we are speaking; the seventh a grammarian of Malos; the eighth a writer in geometry; the ninth an epigrammatic poet; the tenth was an Academic philosopher, a native of Tarsus.</p>
 			</section>
 			<section id="part-4-5">
-				<h3>Crantor</h3>
+				<h3 epub:type="title">Crantor</h3>
 				<p>Crantor, a native of Soli, being admired very greatly in his own country, came to Athens and became a pupil of Xenocrates at the same time with Polemo.</p>
 				<p>And he left behind him memorials, in the shape of writings, to the number of 30,000 lines, some of which, however, are by some writers attributed to Arcesilaus.</p>
 				<p>They say of him that when he was asked what it was that he was so charmed with in Polemo, he replied: “That he had never heard him speak in too high or too low a key.”</p>
@@ -223,7 +223,7 @@
 				</blockquote>
 			</section>
 			<section id="part-4-6">
-				<h3>Arcesilaus</h3>
+				<h3 epub:type="title">Arcesilaus</h3>
 				<p>Arcesilaus was the son of Seuthes or Scythes, as Apollodorus states in the third book of his <i epub:type="se:name.publication.book">Chronicles</i>, and a native of Pitane in Aeolia.</p>
 				<p>He was the original founder of the Middle Academy, and the first man who professed to suspend the declaration of his judgment, because of the contrarieties of the reasons alleged on either side. He was likewise the first who attempted to argue on both sides of a question, and who also made the method of discussion, which had been handed down by Plato, by means of question and answer, more contentious than before.</p>
 				<p>He met with Crantor in the following manner: He was one of four brothers, two by the same father and two by the same mother. Of those who were by the same mother the eldest was Pylades, and of those by the same father the eldest was Moereas, who was his guardian; and at first he was a pupil of Autolycus the mathematician, who happened to be a fellow citizen of his before he went to Athens; and with Autolycus he travelled as far as Sardis. After that he became a pupil of Xanthus the musician, and after that attended the lectures of Theophrastus, and subsequently came over to the Academy to Crantor. For Moereas his brother, whom I have mentioned before, urged him to apply himself to rhetoric; but he himself had a preference for philosophy, and when he became much attached to him Crantor asked him, quoting a line out of the <i epub:type="se:name.publication.play">Andromeda</i> of Euripides:</p>
@@ -412,7 +412,7 @@
 				<p>The philosopher of whom we have been speaking flourished, as Apollodorus tells us in his Chronicles, about the hundred and twentieth olympiad.</p>
 			</section>
 			<section id="part-4-7">
-				<h3>Bion</h3>
+				<h3 epub:type="title">Bion</h3>
 				<p>Bion was a native of the country around the Borysthenes; but as to who his parents were, and to what circumstances it was owing that he applied himself to the study of philosophy, we know no more than what he himself told Antigonus. For when Antigonus asked him:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -514,7 +514,7 @@
 				<p>There were ten people of the name of Bion. First of all, the one who flourished at the same time with Pherecydes of Syros, and who has left two books behind him, which are still extant; he was a native of Proconnesus. The second was a Syracusan, the author of a system of rhetoric. The third was the man of whom we have been speaking. The fourth was a pupil of Democritus, and a mathematician, a native of Abdera, who wrote in both the Attic and Ionic dialect. He was the person who first asserted that there were countries where there was night for six months, and day for six months. The fifth was a native of Soli who wrote a history of Aethiopia. The sixth was a rhetorician who has left behind him nine books, inscribed with the names of the Muses, which are still extant. The eighth was a Milesian statuary who is mentioned by Polemo. The ninth was a tragic poet of the number of those who are called Tarsicans. The tenth was a statuary, a native of Clazomenae or Chios, who is mentioned by Hipponax.</p>
 			</section>
 			<section id="part-4-8">
-				<h3>Lacydes</h3>
+				<h3 epub:type="title">Lacydes</h3>
 				<p>Lacydes, the son of Alexander, was a native of Cyrene. He it is who was the founder of the New Academy, having succeeded Arcesilaus; and he was a man of great gravity of character and demeanour, and one who had many imitators.</p>
 				<p>He was industrious from his very childhood, and poor, but very pleasing and sociable in his manners.</p>
 				<p>They say that he had a pleasant way of managing his housekeeping affairs. For when he had taken anything out of his store-chest, he would seal it up again, and throw in his seal through the hole, so that it should be impossible for anything of what he had laid up there to be stolen from him or carried off. But his servants, learning this contrivance of his, broke the seal and carried off as much as they pleased, and then they put the ring back through the hole in the same manner as before; and though they did this repeatedly, they were never detected.</p>
@@ -538,7 +538,7 @@
 				</blockquote>
 			</section>
 			<section id="part-4-9">
-				<h3>Carneades</h3>
+				<h3 epub:type="title">Carneades</h3>
 				<p>Carneades was the son of Epicomus⁠—or Philocomus, as Alexander states in his <i epub:type="se:name.publication.book">Successions</i>⁠—and a native of Cyrene.</p>
 				<p>He read all the books of the Stoics with great care, and especially those of Chrysippus; and then he wrote replies to them, but did it at the same time with such modesty that he used to say: “If Chrysippus had not lived, I should never have existed.”</p>
 				<p>He was a man of as great industry as ever existed; not, however, very much devoted to the investigation of subjects of natural philosophy, but more fond of the discussion of ethical topics, on which account he used to let his hair and his nails grow, from his entire devotion of all his time to philosophical discussion. And he was so eminent as a philosopher that the orators would quit their own schools and come and listen to his lectures.</p>
@@ -594,7 +594,7 @@
 				<p>There was also another man of the name of Carneades, a very indifferent elegiac poet.</p>
 			</section>
 			<section id="part-4-10">
-				<h3>Clitomachus</h3>
+				<h3 epub:type="title">Clitomachus</h3>
 				<p>Clitomachus was a Carthaginian. He was called Asdrubal, and used to lecture on philosophy in his own country in his native language.</p>
 				<p>But when he came to Athens at the age of forty years, he became a pupil of Carneades; and, as he was pleased with his industry, he caused him to be instructed in literature, and himself educated the man carefully. And he carried his diligence to such a degree, that he composed more than four hundred books.</p>
 				<p>And he succeeded Carneades in his schools; and he illustrated his principles a great deal by his writings; as he himself had studied the doctrines of their sects, the Academic, the Peripatetic, and the Stoic. Timon attacks the whole school of Academics, as a body, in these lines:</p>
