--- a/src/epub/text/book-5.xhtml
+++ b/src/epub/text/book-5.xhtml
@@ -7,9 +7,9 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-5" epub:type="chapter">
-			<h2 epub:type="title z3998:roman">V</h2>
+			<h2 epub:type="ordinal z3998:roman">V</h2>
 			<section id="part-5-1">
-				<h3>Aristotle</h3>
+				<h3 epub:type="title">Aristotle</h3>
 				<p>Aristotle was the son of Nicomachus and Phaestias, a citizen of Stagira; and Nicomachus was descended from Nicomachus, the son of Machaon, the son of Aesculapius, as Hermippus tells us in his treatise on Aristotle; and he lived with Amyntas, the king of the Macedonians, as both a physician and a friend.</p>
 				<p>He was the most eminent of all the pupils of Plato; he had a lisping voice, as is asserted by Timotheus the Athenian, in his work on <i epub:type="se:name.publication.book">Lives</i>. He had also very thin legs, they say, and small eyes; but he used to indulge in very conspicuous dress, and rings, and used to dress his hair carefully.</p>
 				<p>He had also a son named Nicomachus, by Herpyllis his concubine, as we are told by Timotheus.</p>
@@ -194,7 +194,7 @@
 				<p>And the Stagirite had many friends, the most eminent of whom was Theophrastus, whom we must proceed to speak of.</p>
 			</section>
 			<section id="part-5-2">
-				<h3>Theophrastus</h3>
+				<h3 epub:type="title">Theophrastus</h3>
 				<p>Theophrastus was a native of Eresus, the son of Melantas, a fuller, as we are told by Athenodorus in the eighth book of his <i epub:type="se:name.publication.book">Philosophical Conversations</i>.</p>
 				<p>He was originally a pupil of Leucippus, his fellow citizen, in his own country; and subsequently, after having attended the lectures of Plato, he went over to Aristotle. And when he withdrew to Chalcis, he succeeded him as president of his school, in the hundred and fourteenth olympiad.</p>
 				<p>It is also said that a slave of his, by name Pomphylus, was a philosopher, as we are told by Myronianus of Amastra, in the first book of <i epub:type="se:name.publication.book">Similar Historical Chapters</i>.</p>
@@ -227,7 +227,7 @@
 				<p>Some writers have stated that Erasistratus the physician was a pupil of his, and it is very likely.</p>
 			</section>
 			<section id="part-5-3">
-				<h3>Strato</h3>
+				<h3 epub:type="title">Strato</h3>
 				<p>Theophrastus was succeeded in the presidency of his school by Strato of Lampsacus, the son of Arcesilaus, of whom he had made mention in his will.</p>
 				<p>He was a man of great eminence, surnamed the Natural Philosopher from his surpassing all men in the diligence with which he applied himself to the investigation of matters of that nature.</p>
 				<p>He was also the preceptor of Ptolemy Philadelphus, and received from him, as it is said, eighty talents; and he began to preside over the school, as Apollodorus tells us in his <i epub:type="se:name.publication.book">Chronicles</i>, in the hundred and twenty-third olympiad, and continued in that post for eighteen years.</p>
@@ -250,7 +250,7 @@
 				<p>And this Strato was a man, as has been shown above, of deservedly great popularity; having devoted himself to the study of every kind of philosophy, and especially of that branch of it called natural philosophy, which is one of the most ancient and important branches of the whole.</p>
 			</section>
 			<section id="part-5-4">
-				<h3>Lycon</h3>
+				<h3 epub:type="title">Lycon</h3>
 				<p>He was succeeded by Lycon, a native of the Troas, the son of Astyanax, a man of great eloquence and of especial ability in the education of youth. For he used to say that it was fit for boys to be harnessed with modesty and rivalry, as much as for horses to be equipped with a spur and a bridle. And his eloquence and energy in speaking is apparent from this instance, for he speaks of a virgin who was poor in the following manner: “A damsel, who for want of a dowry goes beyond the seasonable age, is a heavy burden to her father;” on which account they say that Antigonus said with reference to him that the sweetness and beauty of an apple could not be transferred to anything else, but that one might see, in the case of this man, all these excellencies in as great perfection as on a tree; and he said this because he was a surpassingly sweet speaker. On which account, some people prefixed a <i xml:lang="grc">Γ</i> to his name.<a href="endnotes.xhtml#note-50" id="noteref-50" epub:type="noteref">50</a> But as a writer he was very unequal to his reputation. And he used to jest in a careless way upon those who repented that they had not learnt when they had the opportunity, and who now wished that they had done so, saying<!-- " saying, said " in the original, p. 205 --> that they were accusing themselves, showing by a prayer which could not possibly be accomplished their misplaced repentance for their idleness. He used also to say that those who deliberated without coming to a right conclusion, erred in their calculations like men who investigate a correct nature by an incorrect standard, or who look at a face in disturbed water or a distorted mirror. Another of his sayings was that many men go in pursuit of the crown to be won in the forum, but few or none seek to attain the one to be gained at the Olympic games.</p>
 				<p>And as he in many instances gave much advice to the Athenians, he was of exceedingly great service to them.</p>
 				<p>He was also a person of great neatness in his dress, wearing garments of an unsurpassable delicacy, as we are told by Hermippus. He was at the same time exceedingly devoted to the exercises of the Gymnasium, and a man who was always in excellent condition as to his body, displaying every quality of an athlete (though Antigonus of Carystus, pretends that he was bruised about the ears and dirty); and in his own country he is said to have wrestled and played at ball at the Iliaean games.</p>
@@ -274,7 +274,7 @@
 				<p>As he then was thoroughly wise in everything relating to education, and every branch of philosophy, he was no less prudent and careful in the framing of his will. So that in this respect too he deserves to be admired and imitated.</p>
 			</section>
 			<section id="part-5-5">
-				<h3>Demetrius</h3>
+				<h3 epub:type="title">Demetrius</h3>
 				<p>Demetrius was a native of Phalerus, and the son of Phanostratus. He was a pupil of Theophrastus.</p>
 				<p>And as a leader of the people at Athens he governed the city for ten years, and was honored with three hundred and sixty brazen statues the greater part of which were equestrian, and some were placed in carriages or in pair-horse chariots, and the entire number were finished within three hundred days, so great was the zeal with which they were worked at. And Demetrius the Magnesian, in his treatise on People of the same Name, says that he began to be the leader of the commonwealth when Harpalus arrived in Athens, having fled from Alexander. And he governed his country for a long time in a most admirable manner. For he aggrandised the city by increased revenues and by new buildings, although he was a person of no distinction by birth.</p>
 				<p>Though Phavorinus, in the first book of his <i epub:type="se:name.publication.book">Commentaries</i>, asserts that he was of the family of Conon.</p>
@@ -314,7 +314,7 @@
 				<p>The third was a native of Tarsus, a writer of Satires. The fourth was a composer of Iambics, a bitter man. The fifth was a statuary, who is mentioned by Polemo. The sixth was a native of Erythrae, a man who wrote on various subjects and who composed volumes of histories and relations.<a href="endnotes.xhtml#note-52" id="noteref-52" epub:type="noteref">52</a></p>
 			</section>
 			<section id="part-5-6">
-				<h3>Heraclides</h3>
+				<h3 epub:type="title">Heraclides</h3>
 				<p>Heraclides was the son of Euthyphron, and was born at Heraclea, in Pontus; he was also a wealthy man.</p>
 				<p>After he came to Athens, he was at first a disciple of Speusippus, but he also attended the schools of the Pythagorean philosophers, and he adopted the principles of Plato; last of all he became a pupil of Aristotle, as we are told by Sotion in his book entitled the <i epub:type="se:name.publication.book">Successions</i>.</p>
 				<p>He used to wear delicate garments, and was a man of great size, so that he was nicknamed by the Athenians Pompicus<a href="endnotes.xhtml#note-53" id="noteref-53" epub:type="noteref">53</a> instead of Ponticus. But he was of quiet manners and noble aspect.</p>
