--- a/src/epub/text/book-6.xhtml
+++ b/src/epub/text/book-6.xhtml
@@ -7,9 +7,9 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-6" epub:type="chapter">
-			<h2 epub:type="title z3998:roman">VI</h2>
+			<h2 epub:type="ordinal z3998:roman">VI</h2>
 			<section id="part-6-1">
-				<h3>Antisthenes</h3>
+				<h3 epub:type="title">Antisthenes</h3>
 				<p>Antisthenes was an Athenian, the son of Antisthenes. And he was said not to be a legitimate Athenian, in reference to which he said to someone who was reproaching him with the circumstance: “The mother of the Gods too is a Phrygian,” for he was thought to have had a Thracian mother. On which account, as he had borne himself bravely in the battle of Tanagra, he gave occasion to Socrates to say that the son of two Athenians could not have been so brave. And he himself, when disparaging the Athenians who gave themselves great airs as having been born out of the earth itself, said that they were not more noble as far as that went than snails and locusts.</p>
 				<p>Originally he was a pupil of Gorgias the rhetorician, owing to which circumstance he employs the rhetorical style of language in his <i epub:type="se:name.publication.book">Dialogues</i>, especially in his <i epub:type="se:name.publication.book">Truth</i> and in his <i epub:type="se:name.publication.book">Exhortations</i>. And Hermippus says that he had originally intended in his address at the assembly, on account of the Isthmian games, to attack and also to praise the Athenians and Thebans and Lacedaemonians, but that he afterwards abandoned the design when he saw that there were a great many spectators come from those cities. Afterwards, he attached himself to Socrates, and made such progress in philosophy while with him, that he advised all his own pupils to become his fellow pupils in the school of Socrates. And as he lived in the Piraeus, he went up forty furlongs to the city every day, in order to hear Socrates, from whom he learnt the art of enduring, and of being indifferent to external circumstances, and so became the original founder of the Cynic school.</p>
 				<p>And he used to argue that labor was a good thing, by adducing the examples of the great Hercules and of Cyrus, one of which he derived from the Greeks and the other from the barbarians.</p>
@@ -61,7 +61,7 @@
 				<p>There were also three other people of the name of Antisthenes: One, a disciple of Heraclitus; the second, an Ephesian; the third, a historian of Rhodes. And since we have spoken of those who proceeded from the school of Aristippus and Phaedon, we may now go on to the Cynics and Stoics, who derived their origin from Antisthenes. And we will take them in the following order.</p>
 			</section>
 			<section id="part-6-2">
-				<h3>Diogenes</h3>
+				<h3 epub:type="title">Diogenes</h3>
 				<p>Diogenes was a native of Sinope, the son of Hicesius, a money-changer. And Diocles says that he was forced to flee from his native city, as his father kept the public bank there, and had adulterated the coinage. But Eubulides, in his essay on Diogenes, says that it was Diogenes himself who did this, and that he was banished with his father. And indeed he himself, in his <i epub:type="se:name.publication.book">Pordalus</i>, says of himself that he had adulterated the public money. Others say that he was one of the curators, and was persuaded by the artisans employed, and that he went to Delphi, or else to the oracle at Delos, and there consulted Apollo as to whether he should do what people were trying to persuade him to do; and that, as the God gave him permission to do so, Diogenes, not comprehending that the God meant that he might change the political customs<a href="endnotes.xhtml#note-56" id="noteref-56" epub:type="noteref">56</a> of his country if he could, adulterated the coinage; and being detected was banished, as some people say, but as other accounts have it, took the alarm and fled away of his own accord. Some again say that he adulterated the money which he had received from his father, and that his father was thrown into prison and died there, but that Diogenes escaped and went to Delphi and asked, not whether he might tamper with the coinage, but what he could do to become very celebrated, and that in consequence he received the oracular answer which I have mentioned.</p>
 				<p>And when he came to Athens he attached himself to Antisthenes; but as he repelled him, because he admitted no one, he at last forced his way to him by his pertinacity. And once, when he raised his stick at him, he put his head under it and said: “Strike, for you will not find any stick hard enough to drive me away as long as you continue to speak.” And from this time forth he was one of his pupils; and being an exile, he naturally betook himself to a simple mode of life.</p>
 				<p>And when, as Theophrastus tells us in his <i epub:type="se:name.publication.book">Megaric Philosopher</i>, he saw a mouse running about and not seeking for a bed, nor taking care to keep in the dark, nor looking for any of those things which appear enjoyable to such an animal, he found a remedy for his own poverty. He was, according to the account of some people, the first person who doubled up his cloak out of necessity, and who slept in it; and who carried a wallet, in which he kept his food; and who used whatever place was near for all sorts of purposes: eating and sleeping and conversing in it. In reference to which habit he used to say, pointing to the Colonnade of Jupiter, and to the Public Magazine, “that the Athenians had built him places to live in.” Being attacked with illness, he supported himself with a staff; and after that he carried it continually, not indeed in the city, but whenever he was walking in the roads, together with his wallet, as Olympiodorus, the chief man of the Athenians tells us; and Polyeuctus the orator, and Lysanias the son of Aeschrion, tell the same story.</p>
@@ -250,7 +250,7 @@
 				<p>Athenodorus, in the eighth book of his <i epub:type="se:name.publication.book">Conversations</i>, says that the philosopher always had a shining appearance, from his habit of anointing himself.</p>
 			</section>
 			<section id="part-6-3">
-				<h3>Monimus</h3>
+				<h3 epub:type="title">Monimus</h3>
 				<p>Monimus was a Syracusan and a pupil of Diogenes, but also a slave of some Corinthian money-changer, as Sosicrates tells us. Xeniades, who bought Diogenes, used often to come to him, extolling the excellency of Diogenes both in actions and words, till he excited a great affection for the man in the mind of Monimus. For he immediately feigned madness, and threw about all the money and all the coins that were on the table, until his master discarded him, and then he straightway went to Diogenes and became his pupil. He also followed Crates the Cynic a good deal, and devoted himself to the same studies as he did; and the sight of this conduct of his made his master all the more think him mad.</p>
 				<p>And he was a very eminent man, so that even Menander the comic poet speaks of him accordingly; in one of his plays, namely in the <i epub:type="se:name.publication.play">Hippocomus</i>, he mentions him thus:</p>
 				<blockquote epub:type="z3998:verse">
@@ -278,13 +278,13 @@
 				<p>He wrote some jests mingled with serious treatises, and two essays on the Appetites, and an Exhortation.</p>
 			</section>
 			<section id="part-6-4">
-				<h3>Onesicritus</h3>
+				<h3 epub:type="title">Onesicritus</h3>
 				<p>Onesicritus is called by some authors an Aeginetan, but Demetrius the Magnesian affirms that he was a native of Astypalaea. He also was one of the most eminent of the disciples of Diogenes.</p>
 				<p>And he appears in some points to resemble Xenophon. For Xenophon joined in the expedition of Cyrus, and Onesicritus in that of Alexander; and Xenophon wrote the <i epub:type="se:name.publication.book">Cyropaedia</i>, and Onesicritus wrote an account of the education of Alexander. Xenophon, too, wrote a Panegyric on Cyrus, and Onesicritus one on Alexander. They were also both similar to one another in style, except that a copyist is naturally inferior to the original.</p>
 				<p>Menander too, who was surnamed Drymus, was a pupil of Diogenes, and a great admirer of Homer; and so was Hegesaeus of Sinope, who was nicknamed Cloeus, and Philiscus the Aeginetan, as we have said before.</p>
 			</section>
 			<section id="part-6-5">
-				<h3>Crates</h3>
+				<h3 epub:type="title">Crates</h3>
 				<p>Crates was a Theban by birth, and the son of Ascondus. He also was one of the eminent disciples of the Cynic. But Hippobotus asserts that he was not a pupil of Diogenes, but of Bryson the Achaean.</p>
 				<p>There are the following sportive lines of his quoted:</p>
 				<blockquote epub:type="z3998:verse">
@@ -413,7 +413,7 @@
 				</blockquote>
 			</section>
 			<section id="part-6-6">
-				<h3>Metrocles</h3>
+				<h3 epub:type="title">Metrocles</h3>
 				<p>Metrocles was the brother of Hipparchia; and though he had formerly been a pupil of Theophrastus, he had profited so little by his instructions that once, thinking that while listening to a lecture on philosophy he had disgraced himself by his inattention, he fell into despondency and shut himself up in his house, intending to starve himself to death. Accordingly, when Crates heard of it, he came to him, having been sent for; and eating a number of lupins, on purpose, he persuaded him by numbers of arguments, that he had done no harm; for that it was not to be expected that a man should not indulge his natural inclinations and habits; and he comforted him by showing him that he, in a similar case, would certainly have behaved in a similar manner. And after that, he became a pupil of Crates, and a man of great eminence as a philosopher.</p>
 				<p>He burnt all his writings, as Hecaton tells us in the first book of his <i epub:type="se:name.publication.book">Apothegms</i>, and said:</p>
 				<blockquote epub:type="z3998:verse">
@@ -432,7 +432,7 @@
 				<p>His pupils were Theombrotus and Cleomenes, Demetrius of Alexandria, the son of Theombrotus, Timarchus of Alexandria, the son of Cleomenes, and Echecles, of Ephesus. Not but what Echecles was also a pupil of Theombrotus; and Menedemus, of whom we shall speak hereafter, was his pupil. Menippus of Sinope, too, was a very eminent person in his school.</p>
 			</section>
 			<section id="part-6-7">
-				<h3>Hipparchia</h3>
+				<h3 epub:type="title">Hipparchia</h3>
 				<p>Hipparchia, the sister of Metrocles, was charmed among others by the doctrines of this school.</p>
 				<p>Both she and Metrocles were natives of Maronea. She fell in love with both the doctrines and manners of Crates, and could not be diverted from her regard for him, by either the wealth, or high birth, or personal beauty, of any of her suitors, but Crates was everything to her; and she threatened her parents to make away with herself if she were not given in marriage to him. Crates accordingly, being entreated by her parents to dissuade her from this resolution, did all he could; and at last, as he could not persuade her, he rose up, and placing all his furniture before her, he said: “This is the bridegroom whom you are choosing, and this is the whole of his property; consider these facts, for it will not be possible for you to become his partner, if you do not also apply yourself to the same studies, and conform to the same habits that he does.” But the girl chose him; and assuming the same dress that he wore, went about with him as her husband, and appeared with him in public everywhere, and went to all entertainments in his company.</p>
 				<p>And once when she went to sup with Lysimachus, she attacked Theodorus, who was surnamed the Atheist, proposing to him the following sophism: “What Theodorus could not be called wrong for doing, that same thing Hipparchia ought not to be called wrong for doing. But Theodorus does no wrong when he beats himself, therefore Hipparchia does no wrong when she beats Theodorus.” He made no reply to what she said, but only pulled her clothes about; but Hipparchia was neither offended nor ashamed, as many a woman would have been, but when he said to her:</p>
@@ -459,7 +459,7 @@
 				<p>And he died at a great age, and was buried in Boeotia.</p>
 			</section>
 			<section id="part-6-8">
-				<h3>Menippus</h3>
+				<h3 epub:type="title">Menippus</h3>
 				<p>Menippus was also a Cynic, and a Phoenician by descent, a slave by birth, as Achaicus tells us in his <i epub:type="se:name.publication.book">Ethics</i>; and Diocles informs us that his master was a native of Pontus, of the name of Baton; but that subsequently, in consequence of his importunities and miserly habits, he became rich, and obtained the rights of citizenship at Corinth.</p>
 				<p>He never wrote anything serious, but his writings are full of ridiculous matter, and in some respects similar to those of Meleager, who was his contemporary. And Hermippus tells us that he was a man who lent money at daily interest, and that he was called a usurer; for he used to lend on nautical usury, and take security, so that he amassed a very great amount of riches.</p>
 				<p>But at last he fell into a snare and lost all his money, and in a fit of despair he hung himself, and so he died. And we have written a playful epigram on him:</p>
@@ -487,7 +487,7 @@
 				<p>The writings left by the Cynic amount to thirteen volumes; a Description of the Dead; a volume called <i epub:type="se:name.publication.book">Wills</i>; a volume of Letters in which the Gods are introduced; treatises addressed to the Natural Philosophers, and Mathematicians, and Grammarians; one on the Generations of Epicurus, and on the Observance of the Twentieth Day by the philosophers of his school; and one or two other essays.</p>
 			</section>
 			<section id="part-6-9">
-				<h3>Menedemus</h3>
+				<h3 epub:type="title">Menedemus</h3>
 				<p>Menedemus was a disciple of Colotes of Lampsacus.</p>
 				<p>He proceeded, as Hippobotus tells, to such a great degree of superstition that he assumed the garb of a fury, and went about saying that he had come from hell to take notice of all who did wrong, in order that he might descend thither again and make his report to the deities who abode in that country. And this was his dress: a tunic of a dark color reaching to his feet, and a purple girdle round his waist, an Arcadian hat on his head with the twelve signs of the zodiac embroidered on it, tragic buskins, a preposterously long beard, and an ashen staff in his hand.</p>
 				<p>These then are the lives of each of the Cynics; and we shall also subjoin some of the doctrines which they all held in common, if indeed it is not an abuse of language to call that a sect of philosophy at all, instead of, as some contend it should be termed, a mere system of life.</p>
