--- a/src/epub/text/book-7.xhtml
+++ b/src/epub/text/book-7.xhtml
@@ -7,9 +7,9 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-7" epub:type="chapter">
-			<h2 epub:type="title z3998:roman">VII</h2>
+			<h2 epub:type="ordinal z3998:roman">VII</h2>
 			<section id="part-7-1">
-				<h3>Zeno</h3>
+				<h3 epub:type="title">Zeno</h3>
 				<p>Zeno was the son of Mnaseas, or Demeas, and a native of Citium, in Cyprus, which is a Grecian city, partly occupied by a Phoenician colony.</p>
 				<p>He had his head naturally bent on one side, as Timotheus the Athenian tells us, in his work on <i epub:type="se:name.publication.book">Lives</i>. And Apollonius the Tyrian says that he was thin, very tall, of a dark complexion; in reference to which someone once called him an Egyptian Clematis, as Chrysippus relates in the first volume of his <i epub:type="se:name.publication.book">Proverbs</i>: he had fat, flabby, weak legs, on which account Persaeus, in his <i epub:type="se:name.publication.book">Convivial Reminiscences</i>, says that he used to refuse many invitations to supper; and he was very fond, as it is said, of figs both fresh and dried in the sun.</p>
 				<p>He was a pupil, as has been already stated, of Crates. After that, they say that he became a pupil of Stilpon and of Xenocrates, for ten years, as Timocrates relates in his <i epub:type="se:name.publication.book">Life of Dion</i>. He is also said to have been a pupil of Polemo. But Hecaton, and Apollonius, of Tyre, in the first book of his essay on Zeno, say that when he consulted the oracle as to what he ought to do to live in the most excellent manner, the God answered him that he ought to become of the same complexion as the dead, on which he inferred that he ought to apply himself to the reading of the books of the ancients. Accordingly, he attached himself to Crates in the following manner. Having purchased a quantity of purple from Phoenicia, he was shipwrecked close to the Piraeus; and when he had made his way from the coast as far as Athens, he sat down by a bookseller’s stall, being now about thirty years of age. And as he took up the second book of Xenophon’s <i epub:type="se:name.publication.book">Memorabilia</i> and began to read it, he was delighted with it, and asked where such men as were described in that book lived; and as Crates happened very seasonably to pass at the moment, the bookseller pointed him out and said: “Follow that man.” From that time forth he became a pupil of Crates; but though he was in other respects very energetic in his application to philosophy, still he was too modest for the shamelessness of the Cynics. On which account, Crates, wishing to cure him of this false shame, gave him a jar of lentil porridge to carry through the Ceramicus; and when he saw that he was ashamed, and that he endeavored to hide it, he struck the jar with his staff and broke it; and as Zeno fled away, and the lentil porridge ran all down his legs, Crates called after him: “Why do you run away, my little Phoenician, you have done no harm?” For some time then he continued a pupil of Crates, and when he wrote his treatise entitled the <i epub:type="se:name.publication.book">Republic</i>, some said, jokingly, that he had written it upon the tail of the dog.</p>
@@ -400,7 +400,7 @@
 				<p>These then are the doctrines on the subject of natural philosophy entertained by them which it seems sufficient for us to detail, having regard to the due proportions of this book. And the following are the points in which some of them disagreed with the rest.</p>
 			</section>
 			<section id="part-7-2">
-				<h3>Ariston</h3>
+				<h3 epub:type="title">Ariston</h3>
 				<p>Ariston the Bald, a native of Chios, surnamed the Siren, said that the chief good was to live in perfect indifference to all those things which are of an intermediate character between virtue and vice; making not the slightest difference between them, but regarding them all on a footing of equality. For that the wise man resembles a good actor; who, whether he is filling the part of Agamemnon or Thersites, will perform them both equally well.</p>
 				<p>And he discarded altogether the topic of physics, and of logic, saying that the one was above us, and that the other had nothing to do with us; and that the only branch of philosophy with which we had any real concern was ethics.</p>
 				<p>He also said that dialectic reasonings were like cobwebs; which, although they seem to be put together on principles of art, are utterly useless.</p>
@@ -438,7 +438,7 @@
 				<p>There was also another man of the name of Ariston: a native of Julii, one of the Peripatetic school. And another who was an Athenian musician. A fourth who was a tragic poet. A fifth, a native of Alaea, who wrote a treatise on the Oratorical Art. A sixth was a peripatetic Philosopher of Alexandria.</p>
 			</section>
 			<section id="part-7-3">
-				<h3>Herillus</h3>
+				<h3 epub:type="title">Herillus</h3>
 				<p>Herillus, a native of Carthage, said that the chief good was knowledge; that is to say, the always conducting oneself in such a way as to refer everything to the principle of living according to knowledge, and not been misled by ignorance. He also said that knowledge was a habit not departing from reason in the reception of perceptions.</p>
 				<p>On one occasion he said that there was no such thing as a chief good, but that circumstances and events changed it, just as the same piece of brass might become a statue either of Alexander or of Socrates. And that besides the chief good or end (<i xml:lang="grc">τέλος</i><a href="endnotes.xhtml#note-95" id="noteref-95" epub:type="noteref">95</a>), there was a subordinate end (<i xml:lang="grc">ὑποτελίς</i>) different from it. And that those who were not wise aimed at the latter; but that only the wise man directed his views to the former. And all the things between virtue and vice he pronounced indifferent.</p>
 				<p>His books contain but few lines, but they are full of power, and contain arguments in opposition to Zeno.</p>
@@ -446,7 +446,7 @@
 				<p>His books are these: One on Exercise; one on the Passions; one on Opinion; the <i epub:type="se:name.publication.book">Lawgiver</i>; the <i epub:type="se:name.publication.book">Skillful Midwife</i>; the <i epub:type="se:name.publication.book">Contradictory Teacher</i>; the <i epub:type="se:name.publication.book">Preparer</i>; the <i epub:type="se:name.publication.book">Director</i>; the <i epub:type="se:name.publication.book">Mercury</i>; the <i epub:type="se:name.publication.book">Medea</i>; a book of Dialogues; a book of Ethical Propositions.</p>
 			</section>
 			<section id="part-7-4">
-				<h3>Dionysius</h3>
+				<h3 epub:type="title">Dionysius</h3>
 				<p>Dionysius, the Deserter, as he was called, asserted that pleasure was the chief good, from the circumstance of his being afflicted with a complaint in his eyes. For, as he suffered severely, he could not pronounce pain a thing indifferent.</p>
 				<p>He was the son of Theophantus, and a native of Heraclea.</p>
 				<p>He was a pupil, as we are told by Diocles, first of all of Heraclides, his fellow citizen; after that of Alexinus, and Menedemus; and last of all of Zeno. And at first, as he was very devoted to learning, he tried his hand at all kinds of poetry. Afterwards, he attached himself to Aratus, whom he took for his model. Having left Zeno, he turned to the Cyrenaics, and became a frequenter of brothels, and in other respects indulged in luxury without disguise.</p>
@@ -455,7 +455,7 @@
 				<p>These now are the chief men who differed from the Stoics. But the man who succeeded Zeno in his school was Cleanthes, whom we must now speak of.</p>
 			</section>
 			<section id="part-7-5">
-				<h3>Cleanthes</h3>
+				<h3 epub:type="title">Cleanthes</h3>
 				<p>Cleanthes was a native of Assos, and the son of Phanias. He was originally a boxer, as we learn from Antisthenes in his <i epub:type="se:name.publication.book">Successions</i>. And he came to Athens, having but four drachmas, as some people say, and attaching himself to Zeno, he devoted himself to Philosophy in a most noble manner; and he adhered to the same doctrines as his master.</p>
 				<p>He was especially eminent for his industry, so that as he was a very poor man, he was forced to undertake mercenary employments, and he used to draw water in the gardens by night, and by day he used to exercise himself in philosophical discussions; on which account he was called Phreantles.<a href="endnotes.xhtml#note-96" id="noteref-96" epub:type="noteref">96</a> They also say that he was on one occasion brought before a court of justice, to be compelled to give an account what his sources of income were from which he maintained himself in such good condition; and that then he was acquitted, having produced as his witness the gardener in whose garden he drew the water; and a woman who was a mealseller, in whose establishment he used to prepare the meal. And the judges of the Areopagus admired him, and voted that ten minae should be given to him; but Zeno forbade him to accept them.</p>
 				<p>They also say that Antigonus presented him three thousand drachmas. And once, when he was conducting some young men to some spectacle, it happened that the wind blew away his cloak, and it was then seen that he had nothing on under it; on which he was greatly applauded by the Athenians, according to the account given by Demetrius the Magnesian, in his essay on People of the Same Name. And he was greatly admired by them on account of this circumstance.</p>
@@ -514,14 +514,14 @@
 				</blockquote>
 			</section>
 			<section id="part-7-6">
-				<h3>Sphaerus</h3>
+				<h3 epub:type="title">Sphaerus</h3>
 				<p>Sphaerus, a native of the Bosphorus, was, as we have said before, a pupil of Cleanthes after the death of Zeno.</p>
 				<p>And when he made a considerable advance in philosophy he went to Alexandria, to the court of Ptolemy Philopater. And once, when there was a discussion concerning the question whether a wise man would allow himself to be guided by opinion, and when Sphaerus affirmed that he would not, the king, wishing to refute him, ordered some pomegranates of wax to be set before him; and when Sphaerus was deceived by them, the king shouted that he had given his assent to a false perception. But Sphaerus answered very neatly that he had not given his assent to the fact that they were pomegranates, but to the fact that it was probable that they might be pomegranates. And that a perception which could be comprehended differed from one that was only probable.</p>
 				<p>Once, when Mnesistratus accused him of denying that Ptolemy was a king, he said to him: “That Ptolemy was a man with such and such qualities, and a king.”<a href="endnotes.xhtml#note-101" id="noteref-101" epub:type="noteref">101</a></p>
 				<p>He wrote the following books: Two on the World; one on the Elements of Seed; one on Fortune; one on the Smallest Things; one on Atoms and Phantoms; one on the Senses; five Conversations about Heraclitus; one on Ethical Arrangement; one on Duty; one on Appetite; two on the Passions; one on Kingly Power; on the Lacedaemonian Constitution; three on Lycurgus and Socrates; one on Law; one on Divination; one volume of Dialogues on Love; one on the Eretrian Philosophers; one on Things Similar; one on Terms; one on Habits; three on Contradictions; one on Reason; one on Riches; one on Glory; one on Death; two on the Art of Dialectics; one on Categorems; one on Ambiguity; and a volume of Letters.</p>
 			</section>
 			<section id="part-7-7">
-				<h3>Chrysippus</h3>
+				<h3 epub:type="title">Chrysippus</h3>
 				<p>Chrysippus was the son of Apollonius, and a native of either Soli or Tarsus, as Alexander tells us in his <i epub:type="se:name.publication.book">Successions</i>; and he was a pupil of Cleanthes. Previously he used to practice running as a public runner; then he became a pupil of Zeno or of Cleanthes, as Diocles and the generality of authors say, and while he was still living he abandoned him, and became a very eminent philosopher.</p>
 				<p>He was a man of great natural ability, and of great acuteness in every way, so that in many points he dissented from Zeno, and also from Cleanthes, to whom he often used to say that he only wanted to be instructed in the dogmas of the school, and that he would discover the demonstrations for himself. But whenever he opposed him with any vehemence, he always repented, so that he used frequently to say:</p>
 				<blockquote epub:type="z3998:verse">
