--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -7,9 +7,9 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-8" epub:type="chapter">
-			<h2 epub:type="title z3998:roman">VIII</h2>
+			<h2 epub:type="ordinal z3998:roman">VIII</h2>
 			<section id="part-8-1">
-				<h3>Pythagoras</h3>
+				<h3 epub:type="title">Pythagoras</h3>
 				<p>Since we have now gone through the Ionian philosophy, which was derived from Thales, and the lives of the several illustrious men who were the chief ornaments of that school; we will now proceed to treat of the Italian School, which was founded by Pythagoras, the son of Mnesarchus, a seal engraver, as he is recorded to have been by Hermippus; a native of Samos, or as Aristoxenus asserts, a Tyrrhenian, and a native of one of the islands which the Athenians occupied after they had driven out the Tyrrhenians. But some authors say that he was the son of Marmacus, the son of Hippasus, the son of Euthyphron, the son of Cleonymus, who was an exile from Phlias; and that Marmacus settled in Samos, and that from this circumstance Pythagoras was called a Samian. After that he migrated to Lesbos, having come to Pherecydes with letters of recommendation from Zoilus, his uncle. And having made three silver goblets, he carried them to Egypt as a present for each of the three priests. He had brothers, the eldest of whom was named Eunomus, the middle one Tyrrhenus, and a slave named Zamolxis, to whom the Getae sacrifice, believing him to be the same as Saturn, according to the account of Herodotus.<a href="endnotes.xhtml#note-107" id="noteref-107" epub:type="noteref">107</a></p>
 				<p>He was a pupil, as I have already mentioned, of Pherecydes the Syrian; and after his death he came to Samos, and became a pupil of Hermodamas, the descendant of Creophylus, who was by this time an old man.</p>
 				<p>And as he was a young man, and devoted to learning, he quitted his country, and got initiated into all the Grecian and barbarian sacred mysteries. Accordingly, he went to Egypt, on which occasion Polycrates gave him a letter of introduction to Amasis; and he learnt the Egyptian language, as Antipho tells us in his treatise on those men who have been conspicuous for virtue, and he associated with the Chaldaeans and with the Magi.</p>
@@ -328,7 +328,7 @@
 				<p>Now Telauges and Theano we have mentioned; and we must now speak of Empedocles, in the first place, for according to some accounts he was a pupil of Pythagoras.</p>
 			</section>
 			<section id="part-8-2">
-				<h3>Empedocles</h3>
+				<h3 epub:type="title">Empedocles</h3>
 				<p>Empedocles, as Hippobotus relates, was the son of Meton the son of Empedocles, and a citizen of Agrigentum. And Timaeus, in the fifteenth book of his <i epub:type="se:name.publication.book">Histories</i>, gives the same account, adding that Empedocles, the grandfather of the poet, was also a most eminent man. And Hermippus tells the same story as Timaeus; and in the same spirit Heraclides, in his treatise on Diseases, relates that he was of an illustrious family, since his father bred a fine stud of horses. Erastothenes, in his <i epub:type="se:name.publication.book">List of the Conquerors at the Olympic Games</i>, says that the father of Meton gained the victory in the seventy-first olympiad, quoting Aristotle as his authority for the assertion.</p>
 				<p>But Apollodorus the grammarian, in his <i epub:type="se:name.publication.book">Chronicles</i>, says that he was the son of Meton; and Glaucus says that he came to Thurii when the city was only just completed. And then proceeding a little further, he adds:</p>
 				<blockquote epub:type="z3998:verse">
@@ -574,7 +574,7 @@
 				<p>His writings on Natural Philosophy and his <i epub:type="se:name.publication.poem">Purifications</i> extend to five thousand verses; and his <i epub:type="se:name.publication.poem">Medical Poem</i> to six hundred; and his Tragedies we have spoken of previously.</p>
 			</section>
 			<section id="part-8-3">
-				<h3>Epicharmus</h3>
+				<h3 epub:type="title">Epicharmus</h3>
 				<p>Epicharmus was a native of Cos, the son of Helothales; he also was a pupil of Pythagoras. When he was three months old he was brought to Megara, in Sicily, and from thence he came to Syracuse, as he himself tells us in his writings. And on his statue there is the following inscription.</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -591,7 +591,7 @@
 				<p>He died at the age of ninety years.</p>
 			</section>
 			<section id="part-8-4">
-				<h3>Archytas</h3>
+				<h3 epub:type="title">Archytas</h3>
 				<p>Archytas was a native of Tarentum, and the son of Mnesagoras; or, as Aristoxenus relates, of Histiaeus.</p>
 				<p>He also was a Pythagorean; and he it was who saved Plato’s life by means of a letter, when he was in danger of being put to death by Dionysius.</p>
 				<p>He was a man held in very general esteem on account of his universal virtue; and he was seven times appointed general of his countrymen, when no one else had ever held the office for more than one year, as the law forbade it to be held for a longer period.</p>
@@ -619,20 +619,20 @@
 				<p>He was the first person who applied mathematical principles to mechanics, and reduced them to a system; and the first also who gave a methodical impulse to descriptive geometry in seeking, in the sections of a demicylinder for a proportional mean, which should enable him to find the double of a given cube. He was also the first person who ever gave the geometrical measure of a cube, as Plato mentions in his <i epub:type="se:name.publication.book">Republic</i>.</p>
 			</section>
 			<section id="part-8-5">
-				<h3>Alcmaeon</h3>
+				<h3 epub:type="title">Alcmaeon</h3>
 				<p>Alcmaeon was a citizen of Crotona; he also was a pupil of Pythagoras. And the chief part of his writings are on medical subjects; but he also at times discusses points of natural philosophy, and asserts that the greater part of human affairs have two sides. He appears to have been the first person who wrote a treatise on Natural Philosophy, as Phavorinus affirms, in his <i epub:type="se:name.publication.book">Universal History</i>; and he used to argue that the moon had the same nature forever which she had at that moment.</p>
 				<p>He was the son of Pirithus, as he himself states at the beginning of his treatise, where he says, “Alcmaeon of Crotona, the son of Pirithus, says this to Brontinus, and Leon, and Bathyllus. About things invisible, and things mortal, the Gods alone have a certain knowledge; but men may form conjectures. …” And so on.</p>
 				<p>He used also to say that the soul was immortal, and that it was in a state of perpetual motion in the same way as the sun.</p>
 			</section>
 			<section id="part-8-6">
-				<h3>Hippasus</h3>
+				<h3 epub:type="title">Hippasus</h3>
 				<p>Hippasus was a citizen of Metapontum, and a pupil of Pythagoras.</p>
 				<p>He used to say that the time of the changes of the world was definite, and that the universe also was finite, and in a state of perpetual motion.</p>
 				<p>Demetrius, in his treatise on People of the Same Name, says that he left no writings behind him.</p>
 				<p>There were two people of the name of Hippasus: this man, and another who wrote an account of the Constitution of the Lacedaemonians in five books. And he was himself a Lacedaemonian.</p>
 			</section>
 			<section id="part-8-7">
-				<h3>Philolaus</h3>
+				<h3 epub:type="title">Philolaus</h3>
 				<p>Philolaus was a native of Crotona, and a pupil of Pythagoras; it was from him that Plato wrote to Dion to take care and purchase the books of Pythagoras.</p>
 				<p>And he died under suspicion of having designed to seize on the tyranny; and we have written an epigram on him:</p>
 				<blockquote epub:type="z3998:verse">
@@ -657,7 +657,7 @@
 				</blockquote>
 			</section>
 			<section id="part-8-8">
-				<h3>Eudoxus</h3>
+				<h3 epub:type="title">Eudoxus</h3>
 				<p>Eudoxus was the son of Aeschines, and a native of Cnidus. He was an astronomer, a geometrician, a physician, and a lawgiver. In geometry he was a pupil of Archytas, and in medicine of Philistion the Sicilian, as Callimachus relates in his <i epub:type="se:name.publication.book">Tablets</i>; and Sotion, in his <i epub:type="se:name.publication.book">Successions</i>, asserts that he was likewise a pupil of Plato; for that, when he was twenty-three years of age, and in very narrow circumstances, he came to Athens with Theomedon the physician, by whom he was chiefly supported, being attracted by the reputation of the Socratic school. Some say that his attachment to Theomedon was cemented by nearer ties. And when he had arrived at Piraeus, he went up to the city every day, and when he had heard the Sophists lecture he returned. And having spent two months there, he returned home again; and being again aided by the contributions of his friends, he set sail for Egypt, with Chrysippus the physician, bearing letters of introduction from Agesilaus to Nectanabis, and that he recommended him to the priests.</p>
 				<p>And having remained there a year and four months, he shaved his eyebrows after the manner of the Egyptian priests, and composed, as it is said, the treatise called the <i epub:type="se:name.publication.book">Octaeteris</i>. From thence he went to Cyzicus, and to the Propontis, in both of which places he lived as a Sophist; he also went to the court of Mausolus. And then, in this manner, he returned again to Athens, having a great many disciples with him, for the sake, as some say, of annoying Plato, because he had originally discarded him from his school. Some say that when Plato gave an entertainment on one occasion, Eudoxus, as the guests were very numerous, introduced the fashion of sitting in a semicircle.</p>
 				<p>Nicomachus, the son of Aristotle, affirms that he used to say that pleasure was the good.</p>
