--- a/src/epub/text/book-9.xhtml
+++ b/src/epub/text/book-9.xhtml
@@ -7,9 +7,9 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-9" epub:type="chapter">
-			<h2 epub:type="title z3998:roman">IX</h2>
+			<h2 epub:type="ordinal z3998:roman">IX</h2>
 			<section id="part-9-1">
-				<h3>Heraclitus</h3>
+				<h3 epub:type="title">Heraclitus</h3>
 				<p>Heraclitus was the son of Blyson, or as some say, of Heracion, and a citizen of Ephesus. He flourished about the sixty-ninth olympiad.</p>
 				<p>He was above all men of a lofty and arrogant spirit, as is plain from his writings, in which he says: “Abundant learning does not form the mind; for if it did, it would have instructed Hesiod, and Pythagoras, and likewise Xenophanes, and Hecataeus. For the only piece of real wisdom is to know that idea which by itself will govern everything on every occasion.” He used to say, too, that Homer deserved to be expelled from the games and beaten, and Archilochus likewise. He used also to say: “It is more necessary to extinguish insolence than to put out a fire.” Another of his sayings was: “The people ought to fight for the law as for their city.” He also attacks the Ephesians for having banished his companion Hermodorus, when he says: “The Ephesians deserve to have all their youth put to death, and all those who are younger still banished from their city, inasmuch as they have banished Hermodorus, the best man among them, saying: ‘Let no one of us be preeminently good; and if there be any such person, let him go to another city and another people.’ ”</p>
 				<p>And when he was requested to make laws for them, he refused, because the city was already immersed in a thoroughly bad constitution. And having retired to the temple of Diana with his children, he began to play at dice; and when all the Ephesians flocked round him, he said: “You wretches, what are you wondering at? is it not better to do this, than to meddle with public affairs in your company?”</p>
@@ -125,7 +125,7 @@
 				<p>The fourth was a Lesbian, who wrote a history of Macedonia. The fifth was a man who blended jest with earnest, and who, having been a harp-player, abandoned that profession for a seriocomic style of writing.</p>
 			</section>
 			<section id="part-9-2">
-				<h3>Xenophanes</h3>
+				<h3 epub:type="title">Xenophanes</h3>
 				<p>Xenophanes was the son of Dexius, or, as Apollodorus says, of Orthomenes. He was a citizen of Colophon; and is praised by Timon. Accordingly, he says:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -160,7 +160,7 @@
 				<p>These are the Promiscuous or unattached philosophers.</p>
 			</section>
 			<section id="part-9-3">
-				<h3>Parmenides</h3>
+				<h3 epub:type="title">Parmenides</h3>
 				<p>Parmenides, the son of Pyres and a citizen of Velia, was a pupil of Xenophanes. And Theophrastus, in his <i epub:type="se:name.publication.book">Abridgment</i>, says that he was also a pupil of Anaximander. However, though he was a pupil of Xenophanes, he was not afterwards a follower of his; but he attached himself to Aminias, and Diochaetes the Pythagorean, as Sotion relates, which last was a poor but honorable and virtuous man. And he it was whose follower he became, and after he was dead he erected a shrine, or <i xml:lang="grc">ἡρῷον</i>, in his honor. And so Parmenides, who was of a noble family and possessed of considerable wealth, was induced, not by Xenophanes but by Aminias, to embrace the tranquil life of a philosopher.</p>
 				<p>He was the first person who asserted that the earth was of a spherical form, and that it was situated in the center of the universe. He also taught that there were two elements: fire and earth; and that one of them occupies the place of the maker, the other that of the matter. He also used to teach that man was originally made out of clay; and that they were composed of two parts, the hot and the cold; of which, in fact, everything consists. Another of his doctrines was that the mind and the soul were the same thing, as we are informed by Theophrastus in his <i epub:type="se:name.publication.book">Natural Philosophy</i>, when he enumerates the theories of nearly all the different philosophers.</p>
 				<p>He also used to say that philosophy was of a twofold character: one kind resting on certain truth, the other on opinion. On which account he says somewhere:</p>
@@ -204,14 +204,14 @@
 				<p>There was also another Parmenides, an orator, who wrote a treatise on the art of Oratory.</p>
 			</section>
 			<section id="part-9-4">
-				<h3>Melissus</h3>
+				<h3 epub:type="title">Melissus</h3>
 				<p>Melissus was a Samian, and the son of Ithagenes. He was a pupil of Parmenides; but he also had conversed with Heraclitus, when he recommended him to the Ephesians, who were unacquainted with him, as Hippocrates recommended Democritus to the people of Abdera.</p>
 				<p>He was a man greatly occupied in political affairs, and held in great esteem among his fellow citizens; on which account he was elected admiral. And he was admired still more on account of his private virtues.</p>
 				<p>His doctrine was that the Universe was infinite, unsusceptible of change, immoveable, and one, being always like to itself and complete; and that there was no such thing as real motion, but that there only appeared to be such. As respecting the Gods, too, he denied that there was any occasion to give a definition of them, for that there was no certain knowledge of them.</p>
 				<p>Apollodorus states that he flourished about the eighty-fourth olympiad.</p>
 			</section>
 			<section id="part-9-5">
-				<h3>Zeno, the Eleatic</h3>
+				<h3 epub:type="title">Zeno, the Eleatic</h3>
 				<p>Zeno was a native of Velia. Apollodorus, in his <i epub:type="se:name.publication.book">Chronicles</i>, says that he was by nature the son of Teleutagoras, but by adoption the son of Parmenides.</p>
 				<p>Timon speaks thus of him and Melissus:</p>
 				<blockquote epub:type="z3998:verse">
@@ -257,7 +257,7 @@
 				<p>We have already said in our account of the Citiaean, that there were eight Zenos; but this one flourished about the seventy-ninth olympiad.</p>
 			</section>
 			<section id="part-9-6">
-				<h3>Leucippus</h3>
+				<h3 epub:type="title">Leucippus</h3>
 				<p>Leucippus was a native of Velia; but as some say, of Abdera, and as others report, of Melos.</p>
 				<p>He was a pupil of Zeno. And his principal doctrines were that all things were infinite, and were interchanged with one another; and that the universe was a vacuum, and full of bodies; also that the worlds were produced by bodies falling into the vacuum, and becoming entangled with one another; and that the nature of the stars originated in motion, according to their increase; also, that the sun is borne round in a greater circle around the moon; that the earth is carried on revolving round the center; and that its figure resembles a drum; he was the first philosopher who spoke of atoms as principles.</p>
 				<p>These are his doctrines in general; in particular detail, they are as follow: he says that the universe is infinite, as I have already mentioned; that of it, one part is a plenum, and the other a vacuum. He also says that the elements, and the worlds which are derived from them, are infinite, and are dissolved again into them; and that the worlds are produced in this manner: That many bodies, of various kinds and shapes, are borne by amputation from the infinite, into a vast vacuum; and then they, being collected together, produce one vortex; according to which they, dashing against one another, and whirling about in every direction, are separated in such a way that like attaches itself to like.</p>
@@ -269,7 +269,7 @@
 				<p>Leucippus admits also that the production of worlds, their increase, their diminution, and their destruction, depend on a certain necessity, the character of which he does not precisely explain.</p>
 			</section>
 			<section id="part-9-7">
-				<h3>Democritus</h3>
+				<h3 epub:type="title">Democritus</h3>
 				<p>Democritus was the son of Hegesistratus, but as some say of Athenocrites, and according to other accounts of Damasippus. He was a native of Abdera, or as it is stated by some authors a citizen of Miletus.</p>
 				<p>He was a pupil of some of the Magi and Chaldaeans, whom Xerxes had left with his father as teachers, when he had been hospitably received by him, as Herodotus informs us;<a href="endnotes.xhtml#note-127" id="noteref-127" epub:type="noteref">127</a> and from these men he, while still a boy, learned the principles of astronomy and theology. Afterwards, his father entrusted him to Leucippus, and to Anaxagoras, as some authors assert, who was forty years older than he. And Phavorinus, in his <i epub:type="se:name.publication.book">Universal History</i>, says that Democritus said of Anaxagoras that his opinions about the sun and moon were not his own, but were old theories, and that he had stolen them. And that he used also to pull to pieces his assertions about the composition of the world, and about mind, as he was hostile to him, because he had declined to admit him as a pupil. How then can he have been a pupil of his, as some assert? And Demetrius in his treatise on People of the Same Name, and Antisthenes in his <i epub:type="se:name.publication.book">Successions</i>, both affirm that he travelled to Egypt to see the priests there, and to learn mathematics of them; and that he proceeded further to the Chaldaeans, and penetrated into Persia, and went as far as the Persian Gulf. Some also say that he made acquaintance with the Gymnosophists in India, and that he went to Aethiopia.</p>
 				<p>He was one of three brothers who divided their patrimony among them; and the most common story is that he took the smaller portion, as it was in money, because he required money for the purpose of travelling; though his brothers suspected him of entertaining some treacherous design. And Demetrius says that his share amounted to more than a hundred talents, and that he spent the whole of it.</p>
@@ -316,7 +316,7 @@
 				<p>There were six people of the name of Democritus: The first was this man of whom we are speaking; the second was a musician of Chios, who lived about the same time; the third was a sculptor who is mentioned by Antigonus; the fourth is a man who wrote a treatise on the Temple at Ephesus, and on the city of Samothrace; the fifth was an epigrammatic poet, of great perspicuity and elegance; the sixth was a citizen of Pergamus, who wrote a treatise on Oratory.</p>
 			</section>
 			<section id="part-9-8">
-				<h3>Protagoras</h3>
+				<h3 epub:type="title">Protagoras</h3>
 				<p>Protagoras was the son of Artemon, or as Apollodorus says (which account is corroborated by Deinon, in his <i epub:type="se:name.publication.book">History of Persia</i>) of Maeander. He was a native of Abdera, as Heraclides Ponticus tell us, in his treatise on Laws; and the same authority informs us that he made laws for the Thurians. But, according to the statement of Eupolis, in his <i epub:type="se:name.publication.play">Flatterers</i>, he was a native of Teos; for he says:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -360,7 +360,7 @@
 				<p>There was also another Protagoras, an astronomer, on whom Euphorion wrote an elegy; and a third also, who was a philosopher of the Stoic sect.</p>
 			</section>
 			<section id="part-9-9">
-				<h3>Diogenes of Apollonia</h3>
+				<h3 epub:type="title">Diogenes of Apollonia</h3>
 				<p>Diogenes was a native of Apollonia, and the son of Apollothemis, a natural philosopher of high reputation; and he was, as Antisthenes reports, a pupil of Anaximenes. He was also a contemporary of Anaxagoras, and Demetrius Phalereus says in his <i epub:type="se:name.publication.book">Defense of Socrates</i> that he was very unpopular at Athens, and even in some danger of his life.</p>
 				<p>The following were his principal doctrines: that the air was an element; that the worlds were infinite, and that the vacuum also was infinite; that the air, as it was condensed, and as it was rarified, was the productive cause of the worlds; that nothing can be produced out of nothing;<a href="endnotes.xhtml#note-130" id="noteref-130" epub:type="noteref">130</a> and that nothing can be destroyed so as to become nothing; that the earth is round, firmly planted in the middle of the universe, having acquired its situation from the circumvolutions of the hot principle around it, and its consistency from the cold.</p>
 				<p>The first words of his treatise are:</p>
@@ -369,7 +369,7 @@
 				</blockquote>
 			</section>
 			<section id="part-9-10">
-				<h3>Anaxarchus</h3>
+				<h3 epub:type="title">Anaxarchus</h3>
 				<p>Anaxarchus was a native of Abdera. He was a pupil of Diogenes of Smyrna; but, as some say, of Metrodorus of Chios; who said that he was not even sure that he knew nothing; and Metrodorus was a pupil of Nessus, of Chios; though others assert that he was a disciple of Democritus.</p>
 				<p>Anaxarchus too enjoyed the intimacy of Alexander, and flourished about the hundred and tenth olympiad. He had for an enemy Nicocreon, the tyrant of Cyprus. And on one occasion, when Alexander, at a banquet, asked him what he thought of the entertainment, he is said to have replied: “O king, everything is provided very sumptuously; and the only thing wanting is to have the head of some satrap served up,” hinting at Nicocreon. And Nicocreon did not forget his grudge against him for this; but after the death of the king, when Anaxarchus, who was making a voyage, was driven against his will into Cyprus, he took him and put him in a mortar, and commanded him to be pounded to death with iron pestles. And then they say that he, disregarding this punishment, uttered that celebrated saying: “Beat the bag of Anaxarchus, but you will not beat Anaxarchus himself.” And then, when Nicocreon commanded that his tongue should be cut out, it is said that he bit it off, and spit it at him. And we have written an epigram upon him in the following terms:</p>
 				<blockquote epub:type="z3998:verse">
@@ -402,7 +402,7 @@
 				</blockquote>
 			</section>
 			<section id="part-9-11">
-				<h3>Pyrrho</h3>
+				<h3 epub:type="title">Pyrrho</h3>
 				<p>Pyrrho was a citizen of Elis, and the son of Pleistarchus, as Diocles informs us, and, as Apollodorus in his <i epub:type="se:name.publication.book">Chronicles</i> asserts, he was originally a painter.</p>
 				<p>And he was a pupil of Bryson, the son of Stilpon, as we are told by Alexander in his <i epub:type="se:name.publication.book">Chronicles</i>. After that he attached himself to Anaxarchus, and attended him everywhere; so that he even went as far as the Gymnosophists, in India, and the Magi.</p>
 				<p>Owing to which circumstance, he seems to have taken a noble line in philosophy, introducing the doctrine of incomprehensibility, and of the necessity of suspending one’s judgment, as we learn from Ascanius of Abdera. For he used to say that nothing was honorable, or disgraceful, or just, or unjust. And on the same principle he asserted that there was no such thing as downright truth; but that men did everything in consequence of custom and law. For that nothing was any more this than that. And his life corresponded to his principles; for he never shunned anything, and never guarded against anything; encountering everything, even wagons for instance, and precipices, and dogs, and everything of that sort; committing nothing whatever to his senses. So that he used to be saved, as Antigonus the Carystian tells us, by his friends who accompanied him. And Aenesidemus says that he studied philosophy on the principle of suspending his judgment on all points, without however, on any occasion acting in an imprudent manner, or doing anything without due consideration. And he lived to nearly ninety years of age.</p>
@@ -608,7 +608,7 @@
 				<p>Some authors have asserted that the chief good of the Stoics is impassibility; others say that it is mildness and tranquillity.</p>
 			</section>
 			<section id="part-9-12">
-				<h3>Timon</h3>
+				<h3 epub:type="title">Timon</h3>
 				<p>Apollonides, of Nicaea, a philosopher of our school, in the first book of his <i epub:type="se:name.publication.book">Commentaries on the Silloi</i>, which he dedicated to Tiberius Caesar, says that Timon was the son of Timarchus, and a Phliasian by birth. And then, when he was young, he studied dancing, and afterwards he renounced that study and went to Megara to Stilpo. And having spent some time there, he returned home again and married. Then he came with his wife to Elis, to see Pyrrho, and there he remained while his children were born, the elder of whom he called Xanthus, and taught him medicine, and left him his successor in his sect of philosophy. And he was a man of considerable eminence, as Sotion tells us in his eleventh book. Afterwards, being in difficulty as to his means, he departed to the Hellespont and the Propontis; and living at Chalcedon as a Sophist, he earned a very high reputation and great popularity; from thence he departed, after having made a considerable fortune, and went to Athens, and remained there till his death, going across once for a short time to Thebes. He was also acquainted with king Antigonus, and with Ptolemy Philadelphus, as he himself testifies in his Iambics.</p>
 				<p>He was, says Antigonus, fond of drinking, and he at times occupied himself with works quite inconsistent with philosophy; for he wrote lyric and epic poems, and tragedies and satiric dramas, and thirty comedies, and sixty tragedies and Silloi, and amatory poems.</p>
 				<p>There are works of his also enumerated in a regular catalog, extending to twenty thousand verses, which are mentioned by Antigonus of Carystos, who also wrote his life. Of the Silloi, there are three volumes; in which he attacks everyone as if he were a Skeptic, and especially he lampoons the dogmatic philosophers under the form of parodies. The first volume of these Silloi contains a long uninterrupted narration; but the second and third are in the form of dialogues. He is represented in them as interrogating Xenophanes the Colophonian about everything, and he utters a long continued discourse; in his second book he speaks of the more ancient philosophers; and in his third of the more modern ones; on which account some people have given the last book the name of the epilogue.</p>
